Switching Makefiles to compile in C++ mode instead of C

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -11,7 +11,7 @@ H_FILES = sample_nabbit_node.h
 .PHONY: clean
 
 $(TARGET): $(SRC) $(H_FILES) $(O_FILES)
-	$(CC) $(CFLAGS) $(SRC) $(NABBIT_INCLUDES) $(LIBARG) -o $@
+	$(CXX) $(CFLAGS) $(SRC) $(NABBIT_INCLUDES) $(LIBARG) -o $@
 
 clean:
 	rm -f $(TARGET) *.obj
